k8s/paperless/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: {name: paperless-ingress, namespace: paperless}
spec:
  ingressClassName: traefik
  rules:
    - host: paperless.k8s.ote
      http:
        paths: [{path: /, pathType: Prefix, backend: {service: {name: paperless, port: {number: 8000}}}}]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress-https
  namespace: paperless
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls: [{secretName: paperless-tls, hosts: [paperless.k8s.overtheedgepaper.ca]}]
  rules:
    - host: paperless.k8s.overtheedgepaper.ca
      http:
        paths: [{path: /, pathType: Prefix, backend: {service: {name: paperless, port: {number: 8000}}}}]
